# VP-Bench

./: README.md  pyproject.toml
common/: constant.py  utils.py
eval/: eval_test_set.py
tools/: collect2parquet.py  stage_1_collect.py
visual_prompts/: arrow_prompt.py  bbox_prompt.py  circle_prompt.py  contour_prompt.py  mask_prompt.py  point_prompt.py  scribble_prompt.py  tag_alphabet.py  tag_digit.py  utils.py  visual_prompt.py
vlmeval/dataset/: image_vqa.py
