[tool.poetry]
name = "vp-bench"
version = "0.1.0"
description = ""
authors = ["Ming <parasolohalo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.3.3"
pillow = "^12.0.0"
pyarrow = "^22.0.0"
fastparquet = "^2024.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
